# postprocessing_gui

./: LICENSE  README.md  headless_task_worker_test.py  postprocess_GUI.py  pyproject.toml  requirements.txt
freemocap_utils/: config.py
freemocap_utils/postprocessing_widgets/: led_widgets.py  parameter_tree_builder.py  parameter_widgets.py  task_worker_thread.py
freemocap_utils/postprocessing_widgets/menus/: filtering_menu.py  interpolation_menu.py  main_menu.py
freemocap_utils/postprocessing_widgets/visualization_widgets/: mediapipe_skeleton_builder.py  skeleton_view_widget.py  timeseries_view_widget.py
skellyforge/: __init__.py  __main__.py  headless_task_worker_test.py  postprocess_GUI.py
skellyforge/freemocap_utils/: config.py  constants.py
skellyforge/freemocap_utils/postprocessing_widgets/: led_widgets.py  parameter_tree_builder.py  parameter_widgets.py  task_worker_thread.py
skellyforge/freemocap_utils/postprocessing_widgets/menus/: filtering_menu.py  interpolation_menu.py  main_menu.py
skellyforge/freemocap_utils/postprocessing_widgets/postprocessing_functions/: rotate_skeleton.py
skellyforge/freemocap_utils/postprocessing_widgets/visualization_widgets/: marker_selector_widget.py  skeleton_view_widget.py  skeleton_viewers_container.py  timeseries_view_widget.py
